after class changes

--- a/chaserGame/chaser.html
+++ b/chaserGame/chaser.html
@@ -1,5 +1,5 @@
-<h1>A Game</h1>
+<h1>Chaser</h1>
 
-<p><progress></progress></p>
+<p><progress max = "100" value = "100"></progress></p>
 
 <canvas width="300" height="300"></canvas>
